// Copyright 2016 The Kubernetes Authors All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package hapi.release;

import "google/protobuf/timestamp.proto";
import "hapi/release/status.proto";

option go_package = "release";

// Info describes release information.
message Info {
	Status status = 1;

	google.protobuf.Timestamp first_deployed = 2;

	google.protobuf.Timestamp last_deployed = 3;

	// Deleted tracks when this object was deleted.
	google.protobuf.Timestamp deleted = 4;

	// Description is human-friendly "log entry" about this release.
	string Description = 5;
}
